--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -112,6 +112,7 @@ es:
       title: Crear una cuenta
       submit: Crear cuenta
       you_are_logged_in: "Ya tienes una cuenta de Teambox. Si quieres entrar como otro usuario, cierra la sesión e inténtalo de nuevo."
+      existing_user: "Si ya tienes una cuenta, <a href='{{login_url}}'>identifícate</a> o <a href='{{forgot_url}}'>restablece tu contraseña</a>."
     create:
       thanks: ¡Gracias por registrarte!
       error: "No hemos podido registrar esa cuenta, ¡lo sentimos! Inténtalo de nuevo."
@@ -714,6 +715,8 @@ es:
     index_projects: Proyectos
     edit_projects: Edit Project
     index_people: Personas
+    new_users: Crear cuenta
+    create_users: Crear cuenta
     edit_users: Editar
     welcome_users: ¡Bienvenido!
     new_projects: Nuevo proyecto
