Adding mobile version link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -601,7 +601,8 @@ en:
       my_tasks: "My {{count}} Tasks"
       archived_tasks: "All {{count}} Archived Tasks"
     footer:
-      support: "Feedback and bugs"
+      support: Feedback and bugs
+      mobile: Mobile version
       help: Help
     watchers:
       unwatch: Unwatch
