--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -90,6 +90,7 @@ fr:
       login: Nom d'utilisateur
       first_name: Prénom
       last_name: Nom
+      biography: Biographie      
       time_zone: Fuseau horaire
       language: Langue
       email: Email
@@ -106,6 +107,7 @@ fr:
       notify_task_lists: Envoyez-moi une notification lorsque je regarde une liste de tâches 
       notify_tasks: Envoyez-moi une notification lorsque je regarde une tâche
       avatar:
+        field: Votre image
         presence: "Il n'est pas possible de télécharger un fichier vide"
         max_size: "La taille du fichier ne peut pas excéder {{mb}} Mb"
       tooltips:
@@ -597,6 +599,7 @@ fr:
       account_settings: Compte et préférences
       profile_information: Information de contact
       profile_picture: Image
+      notifications: Notifications
     task_navigation:
       all_tasks: Toutes
       my_tasks: "Mes tâches ({{count}})"
