Convention: Avatars are saved in /avatars/:id/:size.png and converted to PNG

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -922,3 +922,9 @@ es:
         email: Email
       upload:
         description: Descripción
+    errors:
+      models:
+        user:
+          attributes:
+            avatar:
+              attachment_content_type_invalid: Sube una imagen JPEG o PNG.
