--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -922,3 +922,9 @@ en:
         email: Email
       upload:
         description: Description
+    errors:
+      models:
+        user:
+          attributes:
+            avatar:
+              attachment_content_type_invalid: Upload only JPEG and PNG files.
