--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -110,6 +110,8 @@ fr:
         field: Votre image
         presence: "Il n'est pas possible de télécharger un fichier vide"
         max_size: "La taille du fichier ne peut pas excéder {{mb}} Mb"
+        we_have_this_avatar: "Voici votre image d'utilisateur:"
+        upload_here_or_at_gravatar: "Ajoutez une nouvelle image ici ou créez un <a href='http://gravatar.com'>Gravatar</a> pour partager votre image avec des autres webs."
       tooltips:
         login: "Vous pouvez utiliser un nom d'utilisateur court pour vous connecter. Il doit être en minuscules et sans espace. Vous pouvez utiliser _."
         first_name: Jusqu'à 20 caractères.
